# kino

./: .gitignore  CMakeLists.txt
backup/: CMakeLists.txt
backup/core/: kino.cpp  kino.h  launcher.cpp  launcher.h  sandbox.cpp  sandbox.h
backup/platform/: launcher_platform.h  special_platform.h
backup/platform/win/: launcher_win.cpp  launcher_win.h  special_win.cpp  special_win.h
backup/ui/: ui_config.cpp  ui_config.h
backup/ui/style/: core_fonts.cpp  core_fonts.h
backup/wrap/: ael.cpp  ael.h  application.cpp  application.h
cmake/dependencies/: asio.cmake  googltest.cmake  protobuf.cmake
cmake/utils/: gtest.cmake
test/: CMakeLists.txt  gtest_inlet.cpp
